# financial-ocr

./: .env.example  .gitignore  docker-compose.yaml
.github/workflows/: CD.yaml
app/: Dockerfile  main.py  requirements.txt  tasks.py  utils.py
research/: image.txt.txt  ocr-layout.ipynb  ocr-ocrmypdf.ipynb  ocr-tesseract.ipynb  ocr.ipynb  output.txt  pyproject.toml
