[project]
name = "ocr"
version = "0.1.0"
description = ""
authors = [
    {name = "Abdulmunim",email = "66489217+abdulmunimjemal@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pdf2image (>=1.17.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

